<resources>
    <string name="app_name">AndroidNewbie</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="detail">Detail</string>
    <string name="view_detail">View Detail</string>
    <string name="about">About</string>
    <string name="dev_name">M. Auliya Mirzaq Romdloni</string>
    <string name="dev_email">mirzaqarjap@gmail.com</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
</resources>